feat(core): 将项目从 Minecraft 1.21 迁移到 1.19.4 并降级 Java 版本
- 移除 fabric-permissions-api 依赖并移除相关权限检查代码
- 将 Java 编译版本从 21 降级到 17
- 将 Minecraft 版本从 1.21.11 降级到 1.19.4
- 修改 Mixin 注入点以适配旧版本 Minecraft
- 移除不再支持的 ShadowColor 样式设置
- 使用标准权限系统替换第三方权限 API
- 修复命令发送消息的方法调用
- 简化 Player 盾牌禁用逻辑实现